--- a/src/styles.css
+++ b/src/styles.css
@@ -190,7 +190,7 @@ mayo-strong {
 mayo-strong:hover::after {
 	content: "**";
 } */
-mayo-blockquote {
+blockquote {
 	display: flex;
 	border-left: 5px solid #3399ff;
 	padding-left: 5px;
